frontend/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

h1 {
    padding-bottom: 15px;
}

@media screen and (width >= 600px) {
    .mainContainer {
        display: block;
        column-gap: 20px;
        column-count: 2;
    }
}

@media screen and (width >= 1200px) {
    .mainContainer {
        display: block;
        column-gap: 20px;
        column-count: 3;
    }
    .chartsContainer {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }
}

.ModalBox {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  height: 90%;
  background-color: #2a2a2a;
  color: #e0e0e0;
  border-radius: 2px;
  border: 1px solid #444;
  padding: 15px;
  margin: 10px;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.chartCard {
    background-color: #2a2a2a;
    border: 1px solid #444;
    border-radius: 10px;
    break-inside: avoid;
    margin-bottom: 10px;
}

.chartCard:nth-child(odd) {
    margin-right: 5px;
}
.chartCard:nth-child(even) {
    margin-left: 5px;
}

.partitionSpaceMeter {
    width: 100%;
    optimum: red;
    border-radius: 0px;
}

.diskCard {
    border: 1px solid grey;
    border-radius: 10px;
    padding: 1em;
    margin-top: 1em;
    box-shadow: 3px 7px #222;
}

.partitionCard {
    border: 1px solid lightgray;
    margin-top: 1em;
    padding: 1em;
    box-shadow: 3px 7px #222;
    border-radius: 10px;
}

.diskTitle {
    font-size: 1.5rem;
    line-height: 2rem;
    font-weight: 700;
    text-align: center;
}

.diskLabel {
    text-align: left;
    flex-shrink: 0;
}

.diskId {
    text-align: right;
    font-weight: 700;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    word-break: break-all;
}

.infoRow {
    display: flex;
    justify-content: space-between;
    flex-wrap: nowrap;
    align-items: center;
    gap: 10px;
}

.partitionCardContents {
    display: flex;
    flex-direction: column;
    gap: 8px;
}
.partitionCard p {
    margin: 0px;
}
.partitionCardTitle {
    font-weight: 800;
    font-size: large;
}

.partitionUsedSpaceBar {
    border: 1px solid white;
    height: 20px;
    width: 100%;
    position: relative;
}

.partitionUsedSpaceBarContents {
    height: 100%;
}

.partitionBarText {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 12px;
    font-weight: bold;
    z-index: 2;
    text-shadow: 1px 1px 2px black;
}

